--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -11,7 +11,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC07</td>
+<td>TC08</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -36,6 +36,10 @@
 <tr>
 <td>&nbsp;</td>
 <td>TC01</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC09</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
