--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,22 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="98f367">  <td>18/11/23 16:29:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.beforeClass()[pri:0, instance:Railway.LoginTest@1e178745]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1819776360</td>   <td></td> </tr>
-<tr bgcolor="bd949d">  <td>18/11/23 16:29:24</td>   <td>6887</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC01()[pri:0, instance:Railway.LoginTest@1e178745]">TC01</td> 
-  <td>main@1819776360</td>   <td></td> </tr>
-<tr bgcolor="bd949d">  <td>18/11/23 16:29:32</td>   <td>14693</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC02()[pri:0, instance:Railway.LoginTest@1e178745]">TC02</td> 
-  <td>main@1819776360</td>   <td></td> </tr>
-<tr bgcolor="bd949d">  <td>18/11/23 16:29:33</td>   <td>16020</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC03()[pri:0, instance:Railway.LoginTest@1e178745]">TC03</td> 
-  <td>main@1819776360</td>   <td></td> </tr>
-<tr bgcolor="bd949d">  <td>18/11/23 16:29:35</td>   <td>17560</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC04()[pri:0, instance:Railway.LoginTest@1e178745]">TC04</td> 
-  <td>main@1819776360</td>   <td></td> </tr>
-<tr bgcolor="bd949d">  <td>18/11/23 16:29:36</td>   <td>18667</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC05()[pri:0, instance:Railway.LoginTest@1e178745]">TC05</td> 
-  <td>main@1819776360</td>   <td></td> </tr>
-<tr bgcolor="bd949d">  <td>18/11/23 16:29:40</td>   <td>22723</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC06()[pri:0, instance:Railway.LoginTest@1e178745]">TC06</td> 
-  <td>main@1819776360</td>   <td></td> </tr>
-<tr bgcolor="bd949d">  <td>18/11/23 16:29:45</td>   <td>27926</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC07()[pri:0, instance:Railway.LoginTest@1e178745]">TC07</td> 
-  <td>main@1819776360</td>   <td></td> </tr>
-<tr bgcolor="98f367">  <td>18/11/23 16:29:50</td>   <td>32883</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.afterClass()[pri:0, instance:Railway.LoginTest@1e178745]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1819776360</td>   <td></td> </tr>
+<tr bgcolor="79a8a8">  <td>18/11/24 01:21:46</td>   <td>0</td> <td title="&gt;&gt;TestBase.suiteStart()[pri:0, instance:Railway.LoginTest@e1de817]">&gt;&gt;suiteStart</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1687940142</td>   <td></td> </tr>
+<tr bgcolor="79a8a8">  <td>18/11/24 01:21:46</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.beforeClass()[pri:0, instance:Railway.LoginTest@e1de817]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1687940142</td>   <td></td> </tr>
+<tr bgcolor="85b2ec">  <td>18/11/24 01:21:50</td>   <td>3552</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC06()[pri:0, instance:Railway.LoginTest@e1de817]">TC06</td> 
+  <td>main@1687940142</td>   <td></td> </tr>
+<tr bgcolor="79a8a8">  <td>18/11/24 01:21:50</td>   <td>4159</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.afterClass()[pri:0, instance:Railway.LoginTest@e1de817]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1687940142</td>   <td></td> </tr>
+<tr bgcolor="79a8a8">  <td>18/11/24 01:21:51</td>   <td>4766</td> <td title="&lt;&lt;TestBase.suiteEnd()[pri:0, instance:Railway.LoginTest@e1de817]">&lt;&lt;suiteEnd</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1687940142</td>   <td></td> </tr>
 </table>
